# FlowRAG-backend

./: .env.backup  .env.example  .file_organization.txt  .gitignore  COMPLETE_FLOW_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  CURRENT_STATUS.md  DOCUMENTATION_MEMORY_BANK_COMPLETE.md  FINAL_FLOW_VERIFICATION.md  HYBRID_LLM_QUERY_COMPLETE.md  PROJECT_STRUCTURE.md  QDRANT_FIX_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  ingest_sock_shop_python.py  pyproject.toml  pytest.ini  query_flowrag.py  query_request_flow.py  rebuild_call_relationships.py  sock_shop_query_results.json  test_results_25step.txt  test_results_llm_graphrag.txt  test_security_compat.py  test_sock_shop_queries.py  verify_flow_call_graph.py
agents/: __init__.py
agents/llm/: __init__.py  llm_client.py  response_generator.py
agents/prompts/: __init__.py  templates.py
agents/slm/: __init__.py  gemma_client.py  intent_classifier_slm.py
api/: __init__.py  main.py
config/: __init__.py  settings.py
databases/: __init__.py
docs/: MVP_14_DAY_BUILD_PLAN.md  PROJECT_STATUS.md  SECURITY_AUDIT.md  SECURITY_GUIDE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  UFIS_EXECUTIVE_OVERVIEW.md  UFIS_IMPLEMENTATION_PLAN.md  UFIS_PRODUCT_PHASES.md  UFIS_PRODUCT_PHASES_AGGRESSIVE.md  UFIS_UNIVERSAL_EXPANSION_PLAN.md  UNIVERSAL_FLOW_INTELLIGENCE_SYSTEM.md  sock_shop_memory_bank.md
ingestion/: __init__.py  embeddings.py
orchestrator/: __init__.py  controller.py  flow_detector.py
scripts/: init_databases.py  quick_test.py  test_25step_graphrag.py  test_e2e.py  test_full_rag.py  test_graph_only.py  test_hybrid_rag.py  test_llm_graphrag.py  verify_setup.py
ui/: app.py  index.html
(+77 files in other folders)
