[tool.poetry]
name = "graph-rag-backend"
version = "0.1.0"
description = "FlowRAG - Graph RAG System with Flow Detection"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database clients
neo4j = "^5.16.0"
qdrant-client = "^1.7.0"

# LLM and Embeddings
openai = "^1.10.0"
anthropic = "^0.18.0"
sentence-transformers = "^2.3.1"
transformers = "^4.38.0"
torch = "^2.2.0"
accelerate = "^0.27.0"

# Code parsing
tree-sitter = "^0.21.0"
tree-sitter-languages = "^1.10.2"

# Document processing
python-magic = "^0.4.27"
chardet = "^5.2.0"
beautifulsoup4 = "^4.12.0"
markdown = "^3.5.0"

# Utilities
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
tenacity = "^8.2.3"
redis = "^5.0.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
